use new tonic transforms for GPU caching

--- a/sparse-tensors-gpu/train-with-exodus.ipynb
+++ b/sparse-tensors-gpu/train-with-exodus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,172 +21,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "dt = 4000\n",
     "encoding_dim = 100\n",
     "\n",
-    "class ToRaster():\n",
-    "    def __init__(self, encoding_dim):\n",
-    "        self.encoding_dim = encoding_dim\n",
-    "\n",
-    "    def __call__(self, events):\n",
-    "        # tensor has dimensions (time_steps, encoding_dim)\n",
-    "        tensor = np.zeros((events[\"t\"].max()+1, self.encoding_dim), dtype=int)\n",
-    "        np.add.at(tensor, (events[\"t\"], events[\"x\"]), 1)\n",
-    "        return tensor[:250,:]\n",
-    "\n",
     "transform = transforms.Compose([\n",
-    "    transforms.Downsample(time_factor=1/dt, spatial_factor=encoding_dim/700),\n",
-    "    ToRaster(encoding_dim),\n",
+    "    transforms.Downsample(time_factor=1, spatial_factor=encoding_dim/700),\n",
+    "    transforms.CropTime(max=1e6),\n",
+    "    transforms.ToSparseTensor(sensor_size=(encoding_dim, 1, 1), time_window=dt, include_incomplete=True),\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This dataset has 8156 samples.\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = tonic.datasets.SSC('./data', transform=transform)\n",
+    "dataset = tonic.datasets.SHD('./data', transform=transform, target_transform=torch.tensor)\n",
     "print(f\"This dataset has {len(dataset)} samples.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 128\n",
+    "batch_size = 64\n",
     "\n",
-    "cached_dataset = tonic.DiskCachedDataset(\n",
+    "disk_cached_dataset = tonic.DiskCachedDataset(\n",
     "            dataset=dataset,\n",
-    "            cache_path=os.path.join(f\"cache/ssc/train/{encoding_dim}/{dt}\"),\n",
+    "            cache_path=os.path.join(f\"cache/hsd/train/{encoding_dim}/{dt}\"),\n",
     "        )\n",
-    "cached_dataloader = torch.utils.data.DataLoader(\n",
-    "    cached_dataset, \n",
+    "disk_cached_dataloader = torch.utils.data.DataLoader(\n",
+    "    disk_cached_dataset, \n",
     "    batch_size=batch_size, \n",
     "    shuffle=True, \n",
     "    num_workers=4, \n",
     "    collate_fn=tonic.collation.PadTensors(batch_first=True), \n",
     "    drop_last=True\n",
+    ")\n",
+    "\n",
+    "gpu_cached_dataset = tonic.MemoryCachedDataset(\n",
+    "    dataset=dataset,\n",
+    "    device=\"cuda\",\n",
+    "    transform=lambda x: x.to_dense(),\n",
+    ")\n",
+    "gpu_cached_dataloader = torch.utils.data.DataLoader(\n",
+    "    gpu_cached_dataset,\n",
+    "    batch_size=batch_size,\n",
+    "    collate_fn=tonic.collation.PadTensors(batch_first=True),\n",
+    "    drop_last=True,\n",
+    "    shuffle=True,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "127"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gpu_cached_dataloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_list = []\n",
-    "target_list = []\n",
-    "for data, targets in tqdm(cached_dataloader):\n",
-    "    data_list.append(data.to_sparse().coalesce().cuda())\n",
-    "    target_list.append(targets.byte().cuda())\n",
+    "# gpu_cached_dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# next(iter(gpu_cached_dataloader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ExodusModel(nn.Sequential):\n",
+    "    def __init__(self):\n",
+    "        hidden_dim = 128\n",
     "\n",
-    "sparse_tensor_dataset = list(zip(data_list, target_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for data, target in tqdm(sparse_tensor_dataset):\n",
-    "    data.to_dense()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kw_args = dict(\n",
-    "            spike_fn=sa.SingleSpike,\n",
-    "            reset_fn=sa.MembraneSubtract(),\n",
-    "            surrogate_grad_fn=sa.SingleExponential(),\n",
+    "        super().__init__(\n",
+    "            nn.Linear(100, hidden_dim),\n",
+    "            sel.IAF(),\n",
+    "            nn.Linear(hidden_dim, hidden_dim),\n",
+    "            sel.IAF(),\n",
+    "            nn.Linear(hidden_dim, hidden_dim),\n",
+    "            sel.IAF(),\n",
+    "            nn.Linear(hidden_dim, 35),\n",
     "        )\n",
     "\n",
-    "hidden_dim = 128\n",
+    "    def reset_states(self):\n",
+    "        for layer in self.children():\n",
+    "            if isinstance(layer, sl.StatefulLayer):\n",
+    "                layer.reset_states()\n",
     "\n",
-    "model = nn.Sequential(\n",
-    "    nn.Linear(100, hidden_dim),\n",
-    "    sel.IAF(**kw_args),\n",
-    "    nn.Linear(hidden_dim, hidden_dim),\n",
-    "    sel.IAF(**kw_args),\n",
-    "    nn.Linear(hidden_dim, hidden_dim),\n",
-    "    sel.IAF(**kw_args),\n",
-    "    nn.Linear(hidden_dim, 35),\n",
-    ").cuda()"
+    "exodus_model = ExodusModel().cuda()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "775e2695898a47248ec804958ad3a5d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/127 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "dummy_model = nn.Sequential(\n",
-    "    torch.nn.Linear(100, hidden_dim),\n",
-    "    torch.nn.Linear(hidden_dim, hidden_dim),\n",
-    "    torch.nn.Linear(hidden_dim, hidden_dim),\n",
-    "    torch.nn.Linear(hidden_dim, 100),\n",
-    ").cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reset_states(model):\n",
-    "    for layer in model.children():\n",
-    "        if isinstance(layer, sl.StatefulLayer):\n",
-    "            layer.reset_states()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for data, target in tqdm(sparse_tensor_dataset):\n",
-    "    dense = data.to_dense()\n",
-    "    dummy_model.zero_grad()\n",
-    "    output = dense[:, 0]\n",
-    "    for step in range(dense.shape[1]):\n",
-    "        output = dummy_model(dense[:, step] + output)\n",
-    "    output.sum().backward()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for data, target in tqdm(sparse_tensor_dataset):\n",
-    "    reset_states(model)\n",
-    "    dense = data.to_dense()\n",
-    "    model.zero_grad()\n",
-    "    output = model(dense)\n",
+    "for data, target in tqdm(gpu_cached_dataloader):\n",
+    "    exodus_model.reset_states()\n",
+    "    exodus_model.zero_grad()\n",
+    "    output = exodus_model(data)\n",
     "    output.sum().backward()"
    ]
   },
