--- a/sparse-tensors-gpu/gpu-sparse-tensors.ipynb
+++ b/sparse-tensors-gpu/gpu-sparse-tensors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This dataset has 75466 samples.\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = tonic.datasets.SSC('./data', transform=transform)\n",
     "print(f\"This dataset has {len(dataset)} samples.\")"
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +164,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e08190df7c9f4003bad7f2c5af60a840",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/589 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "    Exception ignored in: if w.is_alive():<function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "    if w.is_alive():\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "        assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError: can only test a child process\n",
+      "assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError: can only test a child process\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "Traceback (most recent call last):\n",
+      "Exception ignored in:   File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "<function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "    Traceback (most recent call last):\n",
+      "self._shutdown_workers()  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "\n",
+      "      File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "self._shutdown_workers()    \n",
+      "if w.is_alive():\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      ":     can only test a child processif w.is_alive():\n",
+      "\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError: can only test a child process\n"
+     ]
+    }
+   ],
    "source": [
     "for data, target in tqdm(cached_dataloader):\n",
     "    output = network(data.cuda())\n",
@@ -177,9 +242,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18134ffd9fc449a7ae3113e675d1b251",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/589 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "    if w.is_alive():\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError: can only test a child process\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "    if w.is_alive():\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError: can only test a child process\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    self._shutdown_workers()Exception ignored in: \n",
+      "<function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "\n",
+      "    Traceback (most recent call last):\n",
+      "if w.is_alive():  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "    if w.is_alive():\n",
+      "      File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "    assert self._parent_pid == os.getpid(), 'can only test a child process'assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "\n",
+      "AssertionError: can only test a child process\n",
+      "AssertionError: can only test a child process\n",
+      "Exception ignored in: Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0><function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    \n",
+      "self._shutdown_workers()Traceback (most recent call last):\n",
+      "\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "        if w.is_alive():\n",
+      "self._shutdown_workers()  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "\n",
+      "      File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "assert self._parent_pid == os.getpid(), 'can only test a child process'    \n",
+      "if w.is_alive():AssertionError: \n",
+      "can only test a child process  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "\n",
+      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError: can only test a child process\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "    if w.is_alive():\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError: can only test a child process\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fde182445e0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1358, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/gregorlenz/.local/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1341, in _shutdown_workers\n",
+      "    if w.is_alive():\n",
+      "  File \"/home/gregorlenz/anaconda3/lib/python3.8/multiprocessing/process.py\", line 160, in is_alive\n",
+      "    assert self._parent_pid == os.getpid(), 'can only test a child process'\n",
+      "AssertionError: can only test a child process\n"
+     ]
+    }
+   ],
    "source": [
     "data_list = []\n",
     "target_list = []\n",
@@ -199,9 +357,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2daa903241d4be398da2e5d8ee8c6bd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/589 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "for data, target in tqdm(sparse_tensor_dataset):\n",
     "    output = network(data.to_dense())\n",
