data loading benchmarking for disk, CPU, GPU

--- a/sparse-tensors-gpu/train-with-exodus.ipynb
+++ b/sparse-tensors-gpu/train-with-exodus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "dt = 4000\n",
     "encoding_dim = 100\n",
     "\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Downsample(time_factor=1, spatial_factor=encoding_dim/700),\n",
+    "dense_transform = transforms.Compose([\n",
+    "    transforms.Downsample(spatial_factor=encoding_dim/700),\n",
+    "    transforms.CropTime(max=1e6),\n",
+    "    transforms.ToFrame(sensor_size=(encoding_dim, 1, 1), time_window=dt, include_incomplete=True),\n",
+    "])\n",
+    "\n",
+    "sparse_transform = transforms.Compose([\n",
+    "    transforms.Downsample(spatial_factor=encoding_dim/700),\n",
     "    transforms.CropTime(max=1e6),\n",
     "    transforms.ToSparseTensor(sensor_size=(encoding_dim, 1, 1), time_window=dt, include_incomplete=True),\n",
     "])"
@@ -37,33 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This dataset has 8156 samples.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset = tonic.datasets.SHD('./data', transform=transform, target_transform=torch.tensor)\n",
-    "print(f\"This dataset has {len(dataset)} samples.\")"
+    "dense_dataset = tonic.datasets.SSC('./data', transform=dense_transform)\n",
+    "sparse_dataset = tonic.datasets.SSC('./data', transform=sparse_transform, target_transform=torch.tensor)\n",
+    "print(f\"This dataset has {len(sparse_dataset)} samples.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 64\n",
     "\n",
     "disk_cached_dataset = tonic.DiskCachedDataset(\n",
-    "            dataset=dataset,\n",
-    "            cache_path=os.path.join(f\"cache/hsd/train/{encoding_dim}/{dt}\"),\n",
+    "            dataset=dense_dataset,\n",
+    "            cache_path=os.path.join(f\"cache/{dense_dataset.__class__.__name__}/train/{encoding_dim}/{dt}\"),\n",
     "        )\n",
     "disk_cached_dataloader = torch.utils.data.DataLoader(\n",
     "    disk_cached_dataset, \n",
@@ -74,8 +73,25 @@
     "    drop_last=True\n",
     ")\n",
     "\n",
+    "# sparse_dataloader = torch.utils.data.DataLoader(\n",
+    "#     sparse_dataset,\n",
+    "#     num_workers=4,\n",
+    "#     batch_size=None,\n",
+    "# )\n",
+    "cpu_cached_dataset = tonic.MemoryCachedDataset(\n",
+    "    dataset=sparse_dataset,\n",
+    ")\n",
+    "cpu_cached_dataloader = torch.utils.data.DataLoader(\n",
+    "    cpu_cached_dataset,\n",
+    "    batch_size=batch_size,\n",
+    "    collate_fn=tonic.collation.PadTensors(batch_first=True),\n",
+    "    # num_workers=4, \n",
+    "    drop_last=True,\n",
+    "    shuffle=True,\n",
+    ")\n",
+    "\n",
     "gpu_cached_dataset = tonic.MemoryCachedDataset(\n",
-    "    dataset=dataset,\n",
+    "    dataset=sparse_dataset,\n",
     "    device=\"cuda\",\n",
     "    transform=lambda x: x.to_dense(),\n",
     ")\n",
@@ -90,59 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "127"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(gpu_cached_dataloader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gpu_cached_dataset[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# next(iter(gpu_cached_dataloader))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ExodusModel(nn.Sequential):\n",
-    "    def __init__(self):\n",
+    "class SNN(nn.Sequential):\n",
+    "    def __init__(self, backend='exodus'):\n",
     "        hidden_dim = 128\n",
     "\n",
     "        super().__init__(\n",
     "            nn.Linear(100, hidden_dim),\n",
-    "            sel.IAF(),\n",
+    "            sel.IAF() if backend=='exodus' else sl.IAF(),\n",
     "            nn.Linear(hidden_dim, hidden_dim),\n",
-    "            sel.IAF(),\n",
+    "            sel.IAF() if backend=='exodus' else sl.IAF(),\n",
     "            nn.Linear(hidden_dim, hidden_dim),\n",
-    "            sel.IAF(),\n",
+    "            sel.IAF() if backend=='exodus' else sl.IAF(),\n",
     "            nn.Linear(hidden_dim, 35),\n",
     "        )\n",
     "\n",
@@ -151,34 +129,52 @@
     "            if isinstance(layer, sl.StatefulLayer):\n",
     "                layer.reset_states()\n",
     "\n",
-    "exodus_model = ExodusModel().cuda()"
+    "exodus_model = SNN().cuda()\n",
+    "# sinabs_model = SNN(backend='sinabs').cuda()\n",
+    "model = exodus_model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "775e2695898a47248ec804958ad3a5d1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/127 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "for data, target in tqdm(disk_cached_dataloader):\n",
+    "    data = data.cuda()\n",
+    "    target = target.cuda()\n",
+    "    model.reset_states()\n",
+    "    model.zero_grad()\n",
+    "    output = model(data)\n",
+    "    output.sum().backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data, target in tqdm(cpu_cached_dataloader):\n",
+    "    data = data.cuda()\n",
+    "    target = target.cuda()\n",
+    "    data = data.to_dense().float()\n",
+    "    model.reset_states()\n",
+    "    model.zero_grad()\n",
+    "    output = model(data)\n",
+    "    output.sum().backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for data, target in tqdm(gpu_cached_dataloader):\n",
-    "    exodus_model.reset_states()\n",
-    "    exodus_model.zero_grad()\n",
-    "    output = exodus_model(data)\n",
+    "    model.reset_states()\n",
+    "    model.zero_grad()\n",
+    "    output = model(data)\n",
     "    output.sum().backward()"
    ]
   },
