add notebook to test multiprocessing loading of sparse tensors

--- a/sparse-tensors-gpu/train-with-exodus.ipynb
+++ b/sparse-tensors-gpu/train-with-exodus.ipynb
@@ -58,6 +58,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dataloader = torch.utils.data.DataLoader(\n",
+    "    dense_dataset, \n",
+    "    batch_size=64, \n",
+    "    shuffle=True, \n",
+    "    num_workers=8, \n",
+    "    collate_fn=tonic.collation.PadTensors(batch_first=True), \n",
+    "    drop_last=True,\n",
+    "    pin_memory=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "batch_size = 64\n",
     "\n",
     "disk_cached_dataset = tonic.DiskCachedDataset(\n",
@@ -141,6 +158,21 @@
    "outputs": [],
    "source": [
     "for data, target in tqdm(disk_cached_dataloader):\n",
+    "    data = data.cuda()\n",
+    "    target = target.cuda()\n",
+    "    model.reset_states()\n",
+    "    model.zero_grad()\n",
+    "    output = model(data)\n",
+    "    output.sum().backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data, target in tqdm(dataloader):\n",
     "    data = data.cuda()\n",
     "    target = target.cuda()\n",
     "    model.reset_states()\n",
